# finnie_ai

./: .coveragerc  .gitignore  Applied Agentic AI for SWEs_AI Finance Assistant_Gradesheet - Peter Hanus.docx  README.md  install.sh  pyproject.toml  pytest.ini  requirements.txt  start.sh
src/agents/: DEPRECATED_finance_q_and_a_agent.py  base_agent.py  finance_goals.py  finance_market.py  finance_portfolio.py  finance_q_and_a.py  response.py  router.py  supervisor.py
src/indexer/: build_faiss_index.py
src/indexer/articles/: articles.csv  articles_bogleheads_detailed.csv
src/indexer/articles/bogleheads/: Bogleheads_Glossary.xml  Bogleheads_Retirement.xml  Bogleheads_Tax.xml
src/indexer/articles/html/: morningstar_sequence_risk.html  sec_asset_allocation.html  sec_beginner.html
src/indexer/logs/: failures.csv  success_bg.csv  successes.csv
src/mcp/: charts_mcp.py  finance_q_and_a_mcp.py  goals_mcp.py  portfolio_mcp.py  start-mcp.sh  test_charts.sh  test_charts_mcp.py  test_yfinance_mcp.py  yfinance_mcp.py
src/servers/: image_server.py
src/ui/: app.py  app2.py  app_chatbot.py  app_streamlit.py  demo.py
src/utils/: DEPRECATED_build_index.py  TRACING.md  __init__.py  cache.py  logging.py  tracing.py
src/utils/articles/: articles.csv
src/utils/articles/bogleheads/: Bogleheads.xml  Bogleheads_Behavioral_Finance.xml  Bogleheads_Financial_Planning.xml  Bogleheads_Investing.xml
src/utils/articles/html/: forbes_life_insurance.html  frb_inflation.html  morningstar_safe_withdrawal.html
tests/: test_agents.py  test_integration.py  test_mcp_tools.py  test_tools.py
(+13 files in other folders)
