# /Users/peterhanus/Projects/finnie_ai/pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finnie_ai"
version = "0.1.0"
# ... other metadata ...
requires-python = ">=3.11" 

dependencies = [
    # --- UI/Web Framework ---
    "gradio==6.1.0",
    "gradio_client==2.0.1",
    "fastapi==0.124.4",
    "uvicorn==0.38.0",
    "starlette==0.50.0",
    "matplotlib==3.10.8",
    "streamlit==1.52.2",

    # --- Core AI/LangChain/LangGraph ---
    "langchain==1.1.3",
    "langchain-community==0.4.1",
    "langchain-core>=1.2.5,<2.0.0",
    "langchain-openai==1.1.3",
    "langgraph==1.0.5",
    "langsmith==0.4.59",
    "openai==2.9.0",
    "tiktoken==0.12.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",

    # --- Asynchronous/Networking/Utilities ---
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "yarl==1.22.0",
    "aiofiles==24.1.0", 
    "anyio==4.12.0",
    "httpx==0.28.1",
    "tenacity==9.1.2",
    "diskcache==5.6.3",
    "fsspec==2025.12.0",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",

    # --- Custom/MCP Libraries (Critical for your specific architecture) ---
    "mcp==1.24.0",
    "fastmcp==2.14.0",
    "langchain-mcp-adapters==0.2.1",
    
    # --- Data/Messaging ---
    "dataclasses-json==0.6.7",
    "orjson==3.11.5",
    "marshmallow==3.26.1",
    "redis==7.1.0",
    "fakeredis==2.32.1",
]

[tool.setuptools.packages.find]
where = ["src"]